--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -6,4 +6,7 @@
     <string name="plain_txt_contraseña">Contraseña</string>
     <string name="btn_entrar">Entrar</string>
     <string name="txt_contraseña_olvidada">¿Olvidaste la contraseña?</string>
+    <string name="logo_google">Logo Google</string>
+    <string name="img_twitter">Logo Twitter</string>
+    <string name="img_facebook">Logo Facebook</string>
 </resources>
