Traduccion "See Profile"

--- a/app/src/main/res/values-en-rUS/strings.xml
+++ b/app/src/main/res/values-en-rUS/strings.xml
@@ -49,7 +49,7 @@
     <string name="tv_barberia">Barber \"Los amigos\"</string>
     <string name="btn_agenndar_cita">Agendar cita</string>
     <string name="btn_llamar">Llamar</string>
-    <string name="btn_ver_perfil">Ver perfil</string>
+    <string name="btn_ver_perfil">See profile</string>
     <string name="btn_regresar">Regresar</string>
     <string name="tv_cita">Agendar cita</string>
     <string name="tv_hora_de_cita">Hora de cita</string>
